- Fixed: product list widget doesn't show price for products with variations http://wp.mu/9ai - Fixed: spelling error in shipping settings http://wp.mu/9aj - Fixed: lightbox no longer works on product images - Fixed: not able to use both categories and tags in [mp_list_products] http://wp.mu/9ao - Fixed: grid view broken in 2014 theme - Fixed: related products "Relate Products By" dropdown doesn't accurately show selected value - Added: custom update messages for products and orders - Added: additional schema.org markup for Google Rich Snippets
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/marketpress@14041 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/marketpress-includes/themes/icons.css
+++ b/marketpress-includes/themes/icons.css
@@ -572,10 +572,9 @@ font-size:1px;
 .mp_grid .mp_product_detail, 
 .mp_grid .mp_price_buy { display: inline-block; }
 
-.mp_grid .mp_one_tile, 
-.mp_grid .mp_one_product { display: inline; }
+.mp_grid .mp_one_tile { display: inline-block; }
 
-.mp_grid .mp_product_detail { vertical-align: top; margin-bottom: 60px; margin-top: 30px; }
+.mp_grid .mp_product_detail { vertical-align: top; margin-top: 30px; }
 .mp_grid .mp_price_buy { vertical-align: bottom; }
 
 .mp_grid .mp_buy_form { float:none; }
